maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:6: error: '=>' expected but ':' found.
      case 0: forward();
            ^RandomMouseMaze:7: error: '=>' expected but ':' found.
      case 1: left();
            ^RandomMouseMaze:8: error: '=>' expected but ':' found.
      case 2: right();
            ^